--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 {
   "builds": [
     {
@@ -9,28 +8,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "bot.py"
+      "dest": "/bot.py"
     }
-  ],
-  "buildCommand": "pip install -r requirements.txt"
-=======
-{
-  "builds": [
-    {
-      "src": "bot.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "bot.py"
-    }
-  ],
-  "build": {
-    "commands": [
-      "pip install -r requirements.txt"
-    ]
-  }
->>>>>>> 21650b979c7fcf98d3dbfebc14fb6487e18405e3
+  ]
 }
